# rs-ccze

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  Makefile  README.md
.claude/: settings.json
.github/workflows/: ci.yml
scripts/: Dockerfile  build-c-ref.sh  generate-all-baselines.sh  generate-baseline.sh
src/: cli.rs  color.rs  config.rs  main.rs  plugin.rs  sink.rs  wordcolor.rs
src/plugins/: apm.rs  distcc.rs  dpkg.rs  exim.rs  fetchmail.rs  ftpstats.rs  httpd.rs  icecast.rs  mod.rs  oops.rs  php.rs  postfix.rs  procmail.rs  proftpd.rs  squid.rs  sulog.rs  super_.rs  syslog.rs  ulogd.rs  vsftpd.rs  xferlog.rs
testdata/: SOURCES.md  snap-ansi-httpd.ok  snap-ansi-sysrepeat.ok  snap-apm.in  snap-apm.ok  snap-distcc.in  snap-distcc.ok  snap-exim.in  snap-exim.ok  snap-fetchmail.in  snap-fetchmail.ok  snap-ftpstats.in  snap-ftpstats.ok  snap-html-sysrepeat.ok  snap-icecast.in  snap-icecast.ok  snap-oops.in  snap-oops.ok  snap-php.in  snap-php.ok  snap-postfix.in  snap-postfix.ok  snap-proftpd.in  snap-proftpd.ok  snap-squid.in  snap-squid.ok  snap-sulog.in  snap-sulog.ok  snap-super.in  snap-super.ok  snap-ulogd.in  snap-ulogd.ok  snap-vsftpd.in  snap-vsftpd.ok  snap-xferlog.in  snap-xferlog.ok
tests/: snapshot.rs
