[package]
name = "ccze"
version = "0.1.0"
edition = "2024"
description = "Rust port of ccze, a fast log colorizer"
license = "GPL-2.0-or-later"

[dependencies]
clap = { version = "4", features = ["derive"] }
regex = "1"
once_cell = "1"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"

[profile.release]
lto = "thin"
